--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>eden</title>
 </head>
 <body>
-    HEY ANI EDEN
+    <image src="./img/1.jpg" height="800px" />
+    <image src="./img/2.jpg" />
+    <image src="./img/4.jpg" />
+    <image src="./img/3.png" />
+    <image src="./img/5.jpg" height="800px" />
+    <script>
+        if (!confirm('Are you 18+ ?')) {
+            document.body.innerHTML = '<h1>Lol kid go home 😹</h1>'
+        }
+    </script>
 </body>
 </html>
